--- a/package.json
+++ b/package.json
@@ -2,16 +2,14 @@
   "name": "new-websit",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://acevedod1974.github.io/new-websit",
+  "homepage": "https://acevedod1974.github.io/new-websit",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
-    "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,7 +39,6 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "gh-pages": "^6.2.0"
   }
 }
